# Llama.cfg

./: .gitignore  README.md  pyproject.toml  start.bat
app/: __init__.py  config.py  main.py  models.py
app/api/: routes_configs.py  routes_flags.py  routes_hardware.py  routes_models.py  routes_settings.py  routes_suggest.py
app/core/: flag_scanner.py  gguf_reader.py  hardware.py  ini_io.py  model_scanner.py  store.py  suggester.py
app/static/: index.html
app/static/css/: styles.css
app/static/js/: api.js  config_list.js  estimator.js  flag_editor.js  main.js  models_view.js  settings_view.js  state.js  suggest_view.js  theme.js
tests/: conftest.py  test_api.py  test_flag_scanner.py  test_gguf_reader.py  test_ini_io.py  test_model_scanner.py  test_store.py  test_suggester.py
tests/fixtures/: llama_server_help.txt  sample_config.ini
