[project]
name = "llamacfg"
version = "0.1.0"
description = "Web app to manage a llama.cpp / llama-server models-preset INI config"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "psutil>=5.9",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.5"]

[project.scripts]
llamacfg = "app.main:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_local: tests that need the local llama-server.exe or real gguf files",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
